# dockduo

./: .gitignore  .graphifyignore  CHANGELOG.md  CREDITS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
docs/: DECISIONS.md  DockDuo-BuildPlan.md
docs/project-graph/: GRAPH_REPORT.md  graph.json
docs/superpowers/plans/: 2026-04-22-lil-agents-chat-parity.md
docs/superpowers/specs/: 2026-04-19-phase-3-pty-terminal-design.md  2026-04-22-lil-agents-chat-parity-design.md  2026-04-23-bubble-only-chat-design.md
scripts/: convert-sprites.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  binary_resolve.rs  bubble.rs  claude.rs  config.rs  fullscreen.rs  hit_test.rs  hotkey.rs  lib.rs  main.rs  overlay.rs  taskbar.rs  tray.rs  updater.rs
src-tauri/src/chat/: claude_pipe.rs  codex_pipe.rs  gemini_pipe.rs  mod.rs  protocol.rs  session.rs
src/components/: Character.tsx
src/lib/: chatMarkdown.test.ts  chatMarkdown.ts  sprites.ts  themes.ts
src/store/: appStore.ts
src/styles/: global.css
src/windows/: AgentChat.tsx  BrowserOnlyPlaceholder.tsx  Onboarding.tsx  Overlay.tsx
