[package]
name = "dockduo"
version = "0.1.0"
description = "DockDuo — desktop AI companions that live above your Windows taskbar"
authors = ["Anuj Dev Singh"]
edition = "2021"

[lib]
name = "dockduo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
once_cell = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.60"
features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_Graphics_Gdi",
]
